update plugin for tunnel fixes